Cambio Desarralador por Desarrollador

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="Sergio.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Sergio Berger</h5>
-          <p class="card-text">Desarrallador Web</p>
+          <p class="card-text">Desarrollador Web</p>
           <a href="https://github.com/SergioBerger/about" class="btn btn-primary">Ir a Github</a>
         </div>
       </div>
